css/style.css
/* styles for the home page */

* {
    margin:0 0 0 0;
    padding: 0;
    color:#ffffff;
    list-style: none;
}

body {
	background: #262626;
	background-image: url("../images/pattern.png");
}


.content {
    font-family: "Fontin Sans", "Nobile", "Lucida Grande", "Verdana", "Arial", "Helvetica", "Gill Sans", sans-serif;
    font-size: 90.89%;
}

.afs-nobile {
    font-family: "Nobile", "Lucida Grande", "Verdana", "Arial", "Helvetica", "Gill Sans", sans-serif;
    font-size: 90.89%;
}


.afs-fontin-sans { font-family: "Fontin Sans", "Verdana", "Lucida Grande", "Arial", "Helvetica", "Gill Sans", sans-serif; font-size: 101.63%;}

@font-face {
  font-family: Nobile;
  src: url('/fonts/Nobile/nobile_bold-webfont.ttf');
  src: local('☺'), url('/fonts/Nobile/nobile_bold-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 700;
  font-style: normal;
}


@font-face {
  font-family: Nobile;
  src: url('/fonts/Nobile/nobile_bold_italic-webfont.ttf');
  src: local('☺'), url('/fonts/Nobile/nobile_bold_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold_italic-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 700;
  font-style: italic;
}


@font-face {
  font-family: Nobile;
  src: url('/fonts/Nobile/nobile-webfont.ttf');
  src: local('☺'), url('/fonts/Nobile/nobile-webfont.woff') format('woff'), url('/fonts/Nobile/nobile-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 400;
  font-style: normal;
}


@font-face {
  font-family: Nobile;
  src: url('/fonts/Nobile/nobile_italic-webfont.ttf');
  src: local('☺'), url('/fonts/Nobile/nobile_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_italic-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 400;
  font-style: italic;
}



@font-face {
  font-family: Nobile;
  src: url('/fonts/Nobile/nobile_bold-webfont.ttf');
  src: local('☺'), url('/fonts/Nobile/nobile_bold-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 700;
  font-style: normal;
}


@font-face {
  font-family: Nobile;
  src: url('/fonts/Nobile/nobile_bold_italic-webfont.ttf');
  src: local('☺'), url('/fonts/Nobile/nobile_bold_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold_italic-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 700;
  font-style: italic;
}


@font-face {
  font-family: Nobile;
  src: url('/fonts/Nobile/nobile-webfont.ttf');
  src: local('☺'), url('/fonts/Nobile/nobile-webfont.woff') format('woff'), url('/fonts/Nobile/nobile-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 400;
  font-style: normal;
}


@font-face {
  font-family: Nobile;
  src: url('/fonts/Nobile/nobile_italic-webfont.ttf');
  src: local('☺'), url('/fonts/Nobile/nobile_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_italic-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 400;
  font-style: italic;
}


@font-face {
  font-family: Fontin Sans;
  src: url('/fonts/Fontin-Sans/fontin_sans_b_45b-webfont.ttf');
  src: local('☺'), url('/fonts/Fontin-Sans/fontin_sans_b_45b-webfont.woff') format('woff'), url('/fonts/Fontin-Sans/fontin_sans_b_45b-webfont.ttf') format('truetype'), url('/fonts/Fontin-Sans/fontin_sans_b_45b-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 700;
  font-style: normal;
}


@font-face {
  font-family: Fontin Sans;
  src: url('/fonts/Fontin-Sans/fontin_sans_i_45b-webfont.ttf');
  src: local('☺'), url('/fonts/Fontin-Sans/fontin_sans_i_45b-webfont.woff') format('woff'), url('/fonts/Fontin-Sans/fontin_sans_i_45b-webfont.ttf') format('truetype'), url('/fonts/Fontin-Sans/fontin_sans_i_45b-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 400;
  font-style: italic;
}


@font-face {
  font-family: Fontin Sans;
  src: url('/fonts/Fontin-Sans/fontin_sans_r_45b-webfont.ttf');
  src: local('☺'), url('/fonts/Fontin-Sans/fontin_sans_r_45b-webfont.woff') format('woff'), url('/fonts/Fontin-Sans/fontin_sans_r_45b-webfont.ttf') format('truetype'), url('/fonts/Fontin-Sans/fontin_sans_r_45b-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 400;
  font-style: normal;
}


@font-face {
  font-family: Fontin Sans;
  src: url('/fonts/Fontin-Sans/fontin_sans_bi_45b-webfont.ttf');
  src: local('☺'), url('/fonts/Fontin-Sans/fontin_sans_bi_45b-webfont.woff') format('woff'), url('/fonts/Fontin-Sans/fontin_sans_bi_45b-webfont.ttf') format('truetype'), url('/fonts/Fontin-Sans/fontin_sans_bi_45b-webfont.svg#webfontX4pGz9fc') format('svg');
  font-weight: 700;
  font-style: italic;
}


#wrapper {
    /* generally want any div to be centered */
    /*margin-left:auto;
    margin-right:auto;
    padding-left:100px;
    padding-right:65px;*/
    width:900px;
    margin: 0 auto;
    min-height:50px;
    clear:both;
}

h2{
	font-family: 'Lobster', arial, serif;
	font-size: 4em;
	text-shadow:2px 4px 3px #111111;
	margin: 35px 0 15px 0px;
}

h3 {
	font-size: 1.3em;
	text-shadow:1px 3px 3px #111111;
	margin:16px 0 0 0;
}

.banner_container {
    height:78px;
    /*width:100%;*/
    padding:0 0 0 0;
    background:url('../images/header_bg.png') repeat-x left top;
}

.banner {
    padding:0 0 0 0;
    height:78px;
    /*width:900px;*/
    background:url('../images/header.png') no-repeat center top;
}

.lem_mit_bg {
    height:205px;
    /*width:100%;*/
    padding:0 0 0 0;
    background:url('../images/banner_bg.png') repeat-x left top;
}

.lem_mit_banner {
    height:205px;
    background:url('../images/banner.png') no-repeat center top;
}

.splash_container {
    height:430px;
    /*width:100%;*/
    padding:0 0 0 0;
    background:url('../images/presentationBanner_bg.png') repeat-x left top;
}

.splash {
    height:430px;
    /*width:850px;*/
    padding-left:50px;
    padding-right:0;
    background:url('../images/presentationBanner.png') no-repeat center top;
}

.nav_container {
    height:60px;
    width:100%;
    padding:0 0 0 0;
    background:url('../images/toolbar_bg.png') repeat-x left top;
}

.nav {
    margin:0 auto;
    padding-left:99px;
    padding-right:99px;
    width:702px;
    height:60px;
    background:url('../images/toolbar.png') no-repeat center top;
}

.button_container {
    height:60px;
    width:234px;
    padding:0 0 0 0;
    clear:none;
    float:left;
}

li{
	margin-top: 10px;
}

.button {
    margin:14px auto 0 auto;
    display:block;
    width:77px;
    height:33px;
}

#what_link {
    margin-left:10px;
}

#why_link {
    margin-left:72px;
}

#who_link {
    margin-right:20px;
}

.content {
    width:730px;
    margin-left: 100px;
    overflow:auto;
    padding:0 0 0 0;
}

.section {
    overflow:auto;
}

.subtext{
	border-left: 2px solid #555;
	padding: 0 0 0 10px;
	margin: 5px;
	color: #aaaaaa;
}

.section_desc {
	font-size: 1.3em;
    margin:0 0 30px 0;
    padding:0 0 0 0;
	color: #aaaaaa;
}

.column {
    margin:0 10px 0 0;
    padding:0 10px 0 0;
    width:340px;
    clear:none;
    float:left;
}

div[name~='left_column'] {
    margin-right:20px;
}

div[name~='right_column'] {
    margin:30px 0 0 10px;
}

.subsec_text {
    padding:0 0 0 0;
    margin-bottom:50px;
    width:inherit;
}

